--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="contact-container">
                 <div class="contact-form">
                     <h3>Írjon nekünk</h3>
-                    <form action="https://formsubmit.co/matejcsokboldi@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/galambosito@gmail.com" method="POST">
                         <input type="hidden" name="_captcha" value="false">
                         <label for="name">Név:</label>
                         <input type="text" id="name" name="name" required>
