--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
                 <div class="contact-form">
                     <h3>Írjon nekünk</h3>
                     <form action="https://formsubmit.co/galambosito@gmail.com" method="POST">
+                        <input type="hidden" name="_next" value="https://galambosito.github.io/Galambosito/">
                         <input type="hidden" name="_captcha" value="false">
                         <label for="name">Név:</label>
                         <input type="text" id="name" name="name" required>
