--- a/index.html
+++ b/index.html
@@ -400,8 +400,7 @@
             <div class="contact-container">
                 <div class="contact-form">
                     <h3>Írjon nekünk</h3>
-                    <form action="https://formsubmit.co/galambosito@gmail.com" method="POST">
-                        <input type="hidden" name="_next" value="https://galambosito.github.io/Galambosito/">
+                    <form id="contactForm" method="POST">
                         <label for="name">Név:</label>
                         <input type="text" id="name" name="name" required>
                         
@@ -508,8 +507,8 @@
   left: 0;
   top: 0;
   width: 100%;
-  height : 100%;
-  overflow : auto;
+  height: 100%;
+  overflow: auto;
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -547,12 +546,12 @@ function closeModal() {
 }
 
 document.addEventListener('DOMContentLoaded', function () {
-  const form = document.querySelector('.contact-form form');
+  const form = document.getElementById('contactForm');
   if (form) {
     form.addEventListener('submit', function (e) {
       e.preventDefault();
       const data = new FormData(form);
-      fetch(form.action, {
+      fetch("https://formsubmit.co/ajax/galambosito@gmail.com", {
         method: 'POST',
         body: data,
         headers: {
