--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </div>
                 
 <div class="about-images">
-    <img src="táj 2.jpg" alt="Galambosi-tó látkép" class="about-image1 gallery-image" onclick="openLightbox(0)">
+    <img src="táj 2.jpg" alt="Galambosi-tó látkép" class="about-image1 gallery-image" onclick="openLightbox(0)" style="width: 100%; max-width: 700px; height: auto; display: block; margin: auto;">
 </div>
 
 <!-- Lightbox modal -->
