--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galambosi-tó Bemutató</title>
+    <link rel="icon" href="logo.png" type="image/png">
+    <title>Galambosi-tó</title>
+    <meta name="description" content="Természetközeli horgásztó Püspökhatvan szívében. Halfajták, nyitvatartás, képek és kapcsolat – minden egy helyen.">
+    <meta name="keywords" content="galambosi tó, galambosito, püspökhatvan, horgászat, halak, természet, GH, horgásztó">
+    <meta name="author" content="Galambosi Horgásztó">
     <style>
         :root {
             --primary-color: #1a1a1a;
