--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png" type="image/png">
     <title>Galambosi-tó</title>
-    <meta name="description" content="Természetközeli horgásztó Püspökhatvan szívében. Halfajták, nyitvatartás, képek és kapcsolat – minden egy helyen.">
-    <meta name="keywords" content="galambosi tó, galambosito, püspökhatvan, horgászat, halak, természet, GH, horgásztó">
-    <meta name="author" content="Galambosi Horgásztó">
+    <meta name="description" content="Horgászati lehetőségek, halfajták, kapcsolat és természetközeli élmény a Galambosi-tónál.">
+    <meta name="keywords" content="galambosi tó, püspökhatvan, horgászat, halfajták, természet, tó">
+    <meta name="author" content="Galambosi-tó">
+    <meta property="og:title" content="Galambosi-tó – Püspökhatvan természeti kincse">
+    <meta property="og:description" content="Ismerje meg a Galambosi-tavat, halfajtáinkat és a természet nyugalmát.">
+    <meta property="og:image" content="https://galambosito.github.io/Galambosito/elokep.png">
+    <meta property="og:url" content="https://galambosito.github.io/Galambosito/">
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         :root {
             --primary-color: #1a1a1a;
