--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                   <button class="tab-button active" onclick="showTab('fish-species')">Halfajták</button>
                   <button class="tab-button" onclick="showTab('fish-records')">Rekordok</button>
                   <button class="tab-button" onclick="showTab('fish-catches')">Fogások</button>
-                </div>>
+                </div>
                 
                 <!-- Halfajták tab -->
                 <div id="fish-species" class="tab-content active">
