--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
               <div class="contact-form">
                 <h3>Írjon nekünk</h3>
                 <form id="contactForm" action="https://formsubmit.co/galambosito@gmail.com" method="POST">
-                    <input type="hidden" name="_next" value="https://galambosito.hu/">
+                    <input type="hidden" name="_next" value="https://galambosito.github.io/Galambosito/">
                     <input type="hidden" name="_template" value="table">
                     <input type="hidden" name="_subject" value="Új üzenet a Galambosi-tó weboldaláról">
                     
