--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Galambosi-tó">
     <meta property="og:title" content="Galambosi-tó – Püspökhatvan természeti kincse">
     <meta property="og:description" content="Ismerje meg a Galambosi-tavat, halfajtáinkat és a természet nyugalmát.">
-    <meta property="og:image" content="https://galambosi-to.hu/Galambosito/sharecucc.png">
+    <meta property="og:image" content="https://galambosi-to.hu/sharecucc.png">
     <meta property="og:url" content="https://galambosi-to.hu/Galambosito/">
     <meta name="twitter:card" content="summary_large_image">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -819,7 +819,6 @@
                         <li style="border-left: 4px solid #000000; padding-left: 1rem; margin-bottom: 1rem;"><strong>Tűzrakás</strong> csak a <strong>kijelölt helyeken</strong> engedélyezett.</li>
                         <li style="border-left: 4px solid #000000; padding-left: 1rem; margin-bottom: 1rem;">A <strong>szanetlik, ülőhelyek, padok</strong> rendeltetésszerű használata <strong>elvárás</strong>.</li>
                         <li style="border-left: 4px solid #000000; padding-left: 1rem; margin-bottom: 1rem;"><strong>Szemetelni TILOS</strong>, minden hulladékot <strong>el kell vinni</strong>.</li>
-                        <li style="border-left: 4px solid #000000; padding-left: 1rem; margin-bottom: 1rem;"><strong>Napijegy:</strong> 4500 Ft · <strong>Szanetli igénybevétele:</strong> +2000 Ft/db · <strong>Éjszakai horgászat</strong> minden 2. hétvégén</li>
                         
                     </ul>
                     </div>
@@ -1113,7 +1112,7 @@
               <div class="contact-form">
                 <h3>Írjon nekünk</h3>
                 <form id="contactForm" action="https://formsubmit.co/galambosito@gmail.com" method="POST">
-                    <input type="hidden" name="_next" value="https://galambosito.github.io/Galambosito/">
+                    <input type="hidden" name="_next" value="https://galambosi-to.hu/">
                     <input type="hidden" name="_template" value="table">
                     <input type="hidden" name="_subject" value="Új üzenet a Galambosi-tó weboldaláról">
                     
