--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="galambosi tó, püspökhatvan, horgászat, halfajták, természet, tó">
     <meta name="author" content="Galambosi-tó">
     <meta property="og:title" content="Galambosi-tó – Püspökhatvan természeti kincse">
-    <meta property="og:description" content="Ismerje meg a Galambosi-tavat, halfajtáinkat és a természet nyugalmát.">
+    <meta property="og:description" content="Ismerje meg a Galambosi-tavat Püspökhatvan közelében! Horgászat, természet, családi kikapcsolódás és változatos halfajok várják Önt!">
     <meta property="og:image" content="https://www.galambosi-to.hu/sharecucc.png">
     <meta property="og:url" content="https://www.galambosi-to.hu/">
     <meta name="twitter:card" content="summary_large_image">
