--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
                     
                     <h3>Horgászati lehetőségek</h3>
                     <p>A tó kiváló horgászati lehetőségeket kínál mind a kezdő, mind a tapasztalat horgászok számára. A telepített halfajok mellett természetes úton is szaporodnak a halak, biztosítva a stabil halállományt.</p>
-                    <p>A horgászhelyeket úgy alakítottuk ki, hogy kényelmes és nyugodt környezetet biztosítsanak a horgászat szerelmeseinek. A tópart több pontján stégek és pihenőhelyek találhatók.</p>
+                    <p>A horgászhelyeket úgy alakítottuk ki, hogy kényelmes és nyugodt környezetet biztosítsanak a horgászat szerelmeseinek. A tópart több pontján pihenőhelyek találhatók.</p>
                     
                     <h3>Környezeti értékek</h3>
                     <p>A Galambosi-tó és környéke gazdag madárvilágnak ad otthont. Rendszeresen megfigyelhető itt a szürke gém, a tőkés réce, és időnként a jégmadár is. A tó partján és környékén változatos növényvilág található, amely fontos élőhelyet biztosít számos rovar- és kétéltűfajnak is.</p>
