--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
         }
     
         // Képek a galériához
-       const images = [
+const images = [
             "táj 2.jpg",
             "naplemente.jpg",
             "növényzet.jpg",
@@ -1235,51 +1235,51 @@
             "gal3.jpg",
             "gal4.jpg",
             "gal5.jpg",
-            "IMG_2625.jpg",
-            "IMG_2626.jpg",
-            "IMG_2627.jpg",
-            "IMG_2628.jpg",
-            "IMG_2629.jpg",
-            "IMG_2630.jpg",
-            "IMG_2631.jpg",
-            "IMG_2632.jpg",
-            "IMG_2633.jpg",
-            "IMG_2634.jpg",
-            "IMG_2635.jpg",
-            "IMG_2636.jpg",
-            "IMG_2637.jpg",
-            "IMG_2638.jpg",
-            "IMG_2639.jpg",
-            "IMG_2640.jpg",
-            "IMG_2641.jpg",
-            "IMG_2642.jpg",
-            "IMG_2643.jpg",
-            "IMG_2644.jpg",
-            "IMG_2645.jpg",
-            "IMG_2646.jpg",
-            "IMG_2647.jpg",
-            "IMG_2648.jpg",
-            "IMG_2649.jpg",
-            "IMG_2650.jpg",
-            "IMG_2651.jpg",
-            "IMG_2652.jpg",
-            "IMG_2653.jpg",
-            "IMG_2654.jpg",
-            "IMG_2655.jpg",
-            "IMG_2656.jpg",
-            "IMG_2657.jpg",
-            "IMG_2658.jpg",
-            "IMG_2659.jpg",
-            "IMG_2660.jpg",
-            "IMG_2661.jpg",
-            "IMG_2662.jpg",
-            "IMG_2663.jpg",
-            "IMG_2664.jpg",
-            "IMG_2665.jpg",
-            "IMG_2666.jpg",
-            "IMG_2667.jpg",
-            "IMG_2668.jpg",
-            "IMG_2669.jpg",
+            "IMG_2625.jpeg",
+            "IMG_2626.jpeg",
+            "IMG_2627.jpeg",
+            "IMG_2628.jpeg",
+            "IMG_2629.jpeg",
+            "IMG_2630.jpeg",
+            "IMG_2631.jpeg",
+            "IMG_2632.jpeg",
+            "IMG_2633.jpeg",
+            "IMG_2634.jpeg",
+            "IMG_2635.jpeg",
+            "IMG_2636.jpeg",
+            "IMG_2637.jpeg",
+            "IMG_2638.jpeg",
+            "IMG_2639.jpeg",
+            "IMG_2640.jpeg",
+            "IMG_2641.jpeg",
+            "IMG_2642.jpeg",
+            "IMG_2643.jpeg",
+            "IMG_2644.jpeg",
+            "IMG_2645.jpeg",
+            "IMG_2646.jpeg",
+            "IMG_2647.jpeg",
+            "IMG_2648.jpeg",
+            "IMG_2649.jpeg",
+            "IMG_2650.jpeg",
+            "IMG_2651.jpeg",
+            "IMG_2652.jpeg",
+            "IMG_2653.jpeg",
+            "IMG_2654.jpeg",
+            "IMG_2655.jpeg",
+            "IMG_2656.jpeg",
+            "IMG_2657.jpeg",
+            "IMG_2658.jpeg",
+            "IMG_2659.jpeg",
+            "IMG_2660.jpeg",
+            "IMG_2661.jpeg",
+            "IMG_2662.jpeg",
+            "IMG_2663.jpeg",
+            "IMG_2664.jpeg",
+            "IMG_2665.jpeg",
+            "IMG_2666.jpeg",
+            "IMG_2667.jpeg",
+            "IMG_2668.jpeg",
+            "IMG_2669.jpeg",
         ];
         
         // Képleírások a galériához
@@ -1428,3 +1428,4 @@
 </body>
 
 </html>
+
